# amber_robot

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  SETUP.MD  docker-compose.yml  draft_setup.md  install_deps.sh  test.urdf
computing/: agx_setup.md  can_setup.sh  enable_can_startup.sh  pi_setup.md  rbp_can.sh
cw/devel/: .catkin
cw/devel/lib/pkgconfig/: 2dof_leg_module_v3.pc
cw/devel/share/2dof_leg_module_v3/cmake/: 2dof_leg_module_v3Config.cmake
cw/src/2dof_leg_module_v3/: CMakeLists.txt
cw/src/2dof_leg_module_v3/config/: joint_names_2dof_leg_module_v3.yaml
cw/src/2dof_leg_module_v3/launch/: display.launch  gazebo.launch
cw/src/2dof_leg_module_v3/meshes/: hip_module.STL
cw/src/2dof_leg_module_v3/urdf/: 2dof_leg_module_v3.csv  2dof_leg_module_v3.urdf
docker/: .env  Dockerfile  Dockerfile-viz  README.md  docker-compose.yml
ik_module/: Cargo.toml
ik_module/meshes/: lower_leg.STL
ik_module/src/: ik_config.rs  main.rs  urdf_parser.rs
ik_module/src/meshes/: upper_leg.STL
ik_module/src/urdf/: 2dof_leg_module_v3.urdf
inverse_kinematics/inverse_kinematics/: Cargo.toml
inverse_kinematics/inverse_kinematics/src/: forward_kinematics.rs  inverse_kinematics.rs  lib.rs  main.rs  structure.txt  urdf_parser.rs
inverse_kinematics/inverse_kinematics/tests/: mapping.rs
inverse_kinematics/inverse_kinematics/urdf/: sample.urdf
kinematics/: Cargo.toml
kinematics/src/: bezier.rs  forward_kinematics.rs  inverse_kinematics.rs  lib.rs  main.rs  path_gen.rs  plot.rs  urdf_parser.rs
kinematics/urdf/: 2dof_leg_module_v3.urdf
odrive/: can_testing.py  init_motors.py  instructions.md  odrive_configurer.py  old_setup.py  setup.py  streamlined_odrive_config.py  tread_motor_config.py  tuner.py
rust-client/: .gitignore  Cargo.toml  Dockerfile  cargofile.txt  compilerun.sh  imgui.ini
rust-client/imu/: Cargo.toml  readme.txt
rust-client/imu/src/: imu.rs  imu_header.h  imu_src.cxx
rust-client/kinematics/: Cargo.toml
rust-client/kinematics/src/: bezier.rs  forward_kinematics.rs  inverse_kinematics.rs  lib.rs  main.rs  path_gen.rs  plot.rs
rust-client/rustodrive/: Cargo.toml  README.md
rust-client/rustodrive-gui/: Cargo.toml
rust-client/rustodrive/benches/: rustodrive-bench.rs
rust-client/rustodrive/src/: axis.rs  can_manager.rs  can_wrapper.rs  canframe.rs  canproxy.rs  cansocket.rs  commands.rs  constants.rs  lib.rs  macros.rs  messages.rs  odrivegroup.rs  response.rs  test_ui.rs  threads.rs  utils.rs
rust-client/rusttread/: Cargo.toml
rust-client/rusttread/src/: tread.rs
rust-client/src/: cmd_ui.rs  controller.rs  gamepad.rs  keyboard.rs  main.rs  ros_test.rs  test_ui.rs
src/: main.rs
tread/: can_host.ino  canhost.ino  motor.h  motor.ino
