[package]
name = "inverse_kinematics"
version = "0.1.0"
edition = "2021"
authors = ["Vihaan <vihaan.shah@uconn.edu>", "Abhiram <abhiram.gunti@uconn.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
plotters = "0.3.3"
urdf-rs = "0.6.6"
rand = "0.8.4"
flo_curves = "0.6.1"

[[bin]]
name = "inverse_kinematics"
path = "src/main.rs"

[lib]
name = "inverse_kinematics"
path = "src/lib.rs"