[package]
name = "rustodrive-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
rustodrive = { path = "../rustodrive" }
imgui = "0.8.2"
imgui-winit-support = "0.8.2"

glow = "0.10.0"
memoffset = "0.6.4"

[dev-dependencies]
rustodrive = { path = "../rustodrive", features = ["mock-socket"] }