[package]
name = "rustodrive"
version = "0.1.0"
edition = "2021"
authors = ["Kalin <kalin.kochnev@uconn.edu>"]
license = "MIT"
keywords = ["odrive", "CAN"]
categories = ["motor-control", "rust-bindings"]
description = "Rust bindings for controlling multiple ODrives with the CAN protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock-socket = []

[dependencies]
socketcan = "1.7.0" #for communication with the odrive
rand = "0.8.5"

[dev-dependencies]
rustodrive = { path = ".", features = ["mock-socket"] }
criterion = "0.3.5"

[[bench]]
name = "rustodrive-bench"
harness = false